- Fixed bug #31396 (compile fails with gd 2.0.33 without freetype)